--- a/assets/website/css/clashgithub/style.css
+++ b/assets/website/css/clashgithub/style.css
@@ -94,7 +94,7 @@ input[type="submit"],.wthree_single_grid ul li a,.author-grid-right h4 a,.popula
 	margin-left:9em;
 }
 .w3ls_logo h1 a{
-	font-size:1.7em;
+	font-size: 1.4rem;
 	color:#fff;
 	text-decoration:none;
 }
@@ -1689,7 +1689,7 @@ h2.typoh2{
 		padding:25px 20px;
 	}
 	.w3ls_logo h1 a {
-		font-size: 1.5em;
+		font-size: 1.4rem;
 	}
 	.w3ls_logo {
 		margin-left: 5em;
@@ -1792,7 +1792,7 @@ h2.typoh2{
 		padding: 25px 11px;
 	}
 	.w3ls_logo h1 a {
-		font-size: 1.4em;
+		font-size: 1.4rem;
 		line-height: 1.3;
 	}
 	.w3ls_logo {
@@ -2155,7 +2155,7 @@ h2.typoh2{
 }
 @media (max-width:568px){
 	.w3ls_logo h1 a {
-		font-size: 1.3em;
+		font-size: 1.4rem;
 	}
 }
 @media (max-width:480px){
@@ -2307,7 +2307,7 @@ h2.typoh2{
 		min-height: 160px;
 	}
 	.w3ls_logo h1 a {
-		font-size: 1.2em;
+		font-size: 1.4rem;
 	}
 	.wthree_single_grid h3 {
 		font-size: 1.4em;
@@ -2512,7 +2512,7 @@ h2.typoh2{
 }
 @media (max-width:320px){
 	.w3ls_logo h1 a {
-		font-size: 1.1em;
+		font-size: 1.4rem;
 	}
 	.header {
 		padding: 1em 0 .7em;
@@ -2669,7 +2669,7 @@ h2.typoh2{
 
 .w3ls_logo {margin-left: 0;}
 .w3ls_logo a {
-	font-size: 61px;
+	font-size: 1.8rem;
 	margin: 0;
 	font-family: 'Maven Pro', sans-serif;
 	font-weight: 500;
